--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -14,12 +14,9 @@ jobs:
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4
       - uses: actions/setup-node@v4
         with:
-          node-version: "15"
-      - uses: pnpm/action-setup@v3.0.0
-        with:
-          version: 5.17.3
-      - run: pnpm install --frozen-lockfile
-      - run: pnpm test
+          node-version: "18.13"
+      - run: yarn --frozen-lockfile
+      - run: yarn test
   publish:
     runs-on: ubuntu-latest
     env:
@@ -40,15 +37,12 @@ jobs:
           token: ${{ secrets.PUBLISH_BOT }}
       - uses: actions/setup-node@v4
         with:
-          node-version: "15"
-      - uses: pnpm/action-setup@v3.0.0
-        with:
-          version: 5.17.3
-      - run: pnpm install --frozen-lockfile
+          node-version: "18.13"
+      - run: yarn --frozen-lockfile
       - name: Setup auth
         run: |
           git config --global user.email "$BOT_EMAIL"
           git config --global user.name "esm-bundle-org-bot"
           echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > .npmrc
       - name: "Publish to npm"
-        run: pnpm run release
+        run: yarn release
