--- a/package.json
+++ b/package.json
@@ -5,26 +5,24 @@
   "type": "module",
   "exports": {
     ".": {
-      "es2015": "./es2015/ivy/angular-compiler.js",
-      "es2020": "./es2020/ivy/angular-compiler.js",
-      "default": "./es2020/ivy/angular-compiler.js"
+      "es2022": "./es2022/angular-compiler.js",
+      "default": "./es2022/angular-compiler.js"
     }
   },
   "scripts": {
-    "test": "pnpm run build && concurrently -n w: 'pnpm:test:*'",
+    "test": "yarn build && concurrently -n w: 'yarn:test:*'",
     "test:browser": "karma start karma.conf.cjs --single-run",
     "debug:test:browser": "karma start karma.conf.cjs",
     "test:formatting": "prettier --check .",
-    "build": "rimraf system es2015 es2020 && rollup -c",
+    "build": "rimraf system es2022 && rollup -c",
     "format": "prettier --write .",
     "release": "release-it",
-    "prepublishOnly": "pnpm run build && pinst --disable",
+    "prepublishOnly": "yarn && pinst --disable",
     "postinstall": "husky install",
     "postpublish": "pinst --enable"
   },
   "files": [
-    "es2015",
-    "es2020",
+    "es2022",
     "system"
   ],
   "repository": {
@@ -41,23 +39,23 @@
   },
   "homepage": "https://github.com/esm-bundle/angular__compiler#readme",
   "devDependencies": {
-    "@angular/compiler": "15.2.10",
-    "@angular/compiler-cli": "15.2.10",
+    "@angular/compiler": "17.3.0",
+    "@angular/compiler-cli": "17.3.0",
     "@rollup/plugin-babel": "6.0.4",
+    "@rollup/plugin-terser": "0.4.4",
     "concurrently": "8.2.2",
     "husky": "8.0.3",
     "karma": "6.4.2",
     "karma-firefox-launcher": "2.1.2",
     "karma-jasmine": "5.1.0",
     "pinst": "3.0.0",
-    "prettier": "2.8.8",
-    "pretty-quick": "3.1.3",
+    "prettier": "3.2.5",
+    "pretty-quick": "4.0.0",
     "release-it": "16.2.1",
     "release-it-plugin-esm-bundle": "3.0.0",
     "rimraf": "5.0.5",
-    "rollup": "2.79.1",
-    "rollup-plugin-terser": "7.0.2",
+    "rollup": "4.14.2",
     "rxjs": "7.8.1",
-    "typescript": "5.2.2"
+    "typescript": "5.4.5"
   }
 }
